<resources>
    <string name="app_name">My Console</string>
    <string name="location_fragment">Location</string>
    <string name="google_fit">Google Fit</string>
    <string name="gallery_text">Pick From \n Gallery</string>
    <string name="document_text">Pick From \n Document</string>
    <string name="link">Link</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="picker_text">Picker</string>
    <string name="kt_samples_text">KT Samples</string>
    <string name="wear_os_watch">Wear OS Watch</string>
    <string name="rest_api_text">REST API</string>
    <string name="toast_text">Toast</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="vital_title">BloodPressure</string>
    <string name="vital_spo2">Spo2</string>
    <string name="vital_weight">Weight</string>
    <string name="vital_temp">Temperature</string>
    <string name="vital_glucose">Glucose</string>
    <string name="vital_heart_rate">Heart Rate</string>
    <string name="vital_sys">SYS</string>
    <string name="vital_dia">DIA</string>
    <string name="vital_graph">View Graph</string>
    <string name="link_title">Link Title</string>
    <string name="link_description">Link Description</string>
    <string name="link_picture">Link Picture</string>
    <string name="past_link">Past your Link....</string>
    <string name="link_preview">Link Preview</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    //Picker String
    <string name="file_name_with_colon">File Name :</string>
    <string name="file_format_with_colon">File Format :</string>
    <string name="file_size_with_colon">File Size :</string>

    <string name="app_names">Instagram</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="adMob_app_id">ca-app-pub-3089551119510710~2433971356</string>
    <string name="play_more_app">https://play.google.com/store/apps/</string>

    <string name="download_folder_path">/InstanceDownload/</string>

    <string name="start">Start</string>
    <string name="next1">Next</string>
    <string name="skip">Skip</string>
    <string name="intro_one">First of all open this app then after open the Instagram app. click copy link option in image and video.</string>
    <string name="intro_two">Then after view in this app</string>
    <string name="intro_one_ten">First of all open this app then after open the Instagram app. click copy link option in image and video.</string>
    <string name="intro_two_ten">Then after past link in url section in this app</string>
    <string name="video_message">Add your video how to use this application</string>

    <string name="home">Home</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Setting</string>

    <string name="submit">Submit</string>
    <string name="enter_url">Enter copy url</string>
    <string name="please_enter_url">please enter copy url</string>

    <string name="exit">Exit</string>
    <string name="share_to">Share to</string>
    <string name="wrong">Some thing went to wrong</string>
    <string name="allow_permission">Allow permission</string>
    <string name="app_not_install">Instagram application not install</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="folder">Instance Download folder show your download image and video show in this app</string>
    <string name="download_msg">First of all one download complete then after you can another download</string>

    <string name="app_name_about_us">Instance</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@gmail.com</string>
    <string name="about_us_about">About</string>
    <string name="about_us_detail">About</string>

    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="set_as_wallpaper">Set Wallpaper</string>

    <string name="loading">Loading....</string>
    <string name="downloading">Downloading</string>
    <string name="no_data_found">No data found</string>
    <string name="not_support">Not Supported</string>
    <string name="service_start">Download service start</string>
    <string name="copy_share_link">Click copy and share link</string>
    <string name="stop">Stop</string>
    <string name="service_off">Download Service off</string>
    <string name="service_on">Download Service on</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_title">Are you sure you want to delete this file</string>

    <string name="delete_confirmation">Delete confirmation message</string>
    <string name="guidance">Guidance</string>
    <string name="use">How to use this application</string>
    <string name="introduction">Introduction video how to use this application</string>

    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="choose_one">Choose one</string>
    <string name="system_default">System default</string>

    <string name="mb">Mb</string>
    <string name="cash_file">Cash file</string>
    <string name="clear_cash_memory">Clear cash memory</string>
</resources>