<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fragment.PickerFragment">

    <LinearLayout
        android:id="@+id/pickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/galleryRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gallery"
                android:contentDescription="@string/app_name"
                android:text="@string/gallery_text" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/cameraRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/photo_camera"
                android:contentDescription="@string/app_name"
                android:text="@string/gallery_text" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/videoRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/video_camera"
                android:contentDescription="@string/app_name"
                android:text="@string/gallery_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/documentRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/file"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:text="@string/document_text"
                app:layout_constraintEnd_toEndOf="parent" />
        </RelativeLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickerLayout"
        android:background="@color/white" />

</RelativeLayout>